--- a/src/App.css
+++ b/src/App.css
@@ -86,16 +86,26 @@ html,
   display: flex;
   gap: 0.5rem;
   margin: 1rem 0;
+  align-items: center;
 }
 
 .map-buttons button {
-  flex: 1;
-  padding: 0.75rem;
-  border: 1px solid #d1d5db;
+  flex: 0 0 auto;
+  padding:  0.25rem;
+  /* border: 1px solid #d1d5db; */
   border-radius: 8px;
-  background: #f9fafb;
+  /* background: #f9fafb; */
   cursor: pointer;
   font-weight: 500;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.map-buttons button img {
+  width: 40px;   /* רוחב התמונה */
+  height: 40px;  /* גובה התמונה */
+  object-fit: contain; /* לשמור על הפרופורציות */
 }
 
 .map-buttons button:hover {
@@ -137,7 +147,7 @@ html,
 }
 
 .doctor-card {
-  text-align: center;
+  text-align: right;
   background: #f9fafb;
   padding: 1.5rem;
   border-radius: 16px;
